--- a/docs/_sass/characters/_nobody.scss
+++ b/docs/_sass/characters/_nobody.scss
@@ -9,7 +9,7 @@ $acc-2: #aef;
 $background-image: url('images/cloud.jpg');
 $section-bg: rgba($bg-2, 0.4);
 
-.nobody-particles {
+#nobody-particles {
   content: "";
   position: fixed;
   top: 0;
@@ -26,7 +26,7 @@ $section-bg: rgba($bg-2, 0.4);
   backdrop-filter: blur(5px);
 }
 
-.main-content:before {
+#main-content:before {
   filter: brightness(130%);
 }
 
